--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedido Especial</title>
+    <style>
+        body {
+            background-color: #FFB6C1; /* Rosa claro */
+            color: #333; /* Cor do texto */
+            text-align: center; /* Centralizar o texto */
+            font-family: 'Arial', sans-serif; /* Escolher uma fonte */
+        }
+        h1 {
+            color: #800080; /* Roxo escuro para o título */
+        }
+    </style>
 </head>
 <body>
     <h1>Queres casar comigo?</h1>
