--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedido Especial</title>
+    <title>Pedido Especial 💍❤️</title>
     <style>
         body {
             background-color: #FFB6C1; /* Rosa claro */
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1>Queres casar comigo?</h1>
-    <p>Esta é a pergunta mais importante da minha vida. Aceitas?</p>
+    <h1>Queres casar comigo? 💑</h1>
+    <p>Esta é a pergunta mais importante da minha vida. Aceitas? ❤️</p>
 </body>
 </html>
