--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             color: #333; /* Cor do texto */
             text-align: center; /* Centralizar o texto */
             font-family: 'Arial', sans-serif; /* Escolher uma fonte */
+            padding: 20px; /* Adicionar um espaçamento interno */
         }
         h1 {
             color: #800080; /* Roxo escuro para o título */
@@ -18,6 +19,6 @@
 </head>
 <body>
     <h1>Queres casar comigo? 💑</h1>
-
+    <p>❤️❤️❤️❤️❤️</p>
 </body>
 </html>
