--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Queres casar comigo? 💑</h1>
+    <h1>Aceitas casar comigo? 💑</h1>
     <p>❤️❤️❤️❤️❤️</p>
 </body>
 </html>
